# hebbian-mlps

./: .gitignore  LICENSE  PAPER_EXPERIMENT_MAP.md  README.md  pyproject.toml
docs/: paper_artifacts.md
scripts/paper/: README.md  common.py  plot_fig2.py  plot_fig3.py  run.py
scripts/paper/targets/: __init__.py  capacity.py  fact_editing.py  margins.py  qwen.py
src/hebbian/: __init__.py  config.py  gpu_sweep.py
src/hebbian/core/: __init__.py  config.py  dtype_utils.py  io.py  metrics.py  registry.py  seed.py
src/hebbian/data/: __init__.py
src/hebbian/data/embeddings/: __init__.py  generators.py  transforms.py
src/hebbian/data/language/: __init__.py  authors.py  book_authors.csv
src/hebbian/data/synthetics/: __init__.py  factsets.py
src/hebbian/demos/: README.md  __init__.py  demo_utils.py  gd_demo.py  hebbian_demo.py  ntk_demo.py
src/hebbian/expts/: __init__.py
src/hebbian/expts/attention_noise/: README.md  helpers.py  plot_pretty.py  plot_sweep.py  run_attention_only.py
src/hebbian/expts/fact_editing/: README.md  __init__.py  common.py  config.py  export_paper_table.py  methods.py  pipeline.py  plot_edit_fraction_sweep.py  run_edit.py  summarize_results.py  (+1 more)
src/hebbian/methods/: __init__.py  base.py
src/hebbian/metrics/: __init__.py  margin_metrics.py  margin_theory.py  value_separability.py
src/hebbian/mlp_core/: __init__.py  exceptions.py  gd_training.py  mapping.py  mlp_gd.py  task.py  utils.py
src/hebbian/transformer/: __init__.py  config.py  data.py  fact_store.py  model.py  norms.py  plotting.py  train.py  train_attention.py  utils.py
(+47 files in other folders)
